# ai-pr-review-prompts

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pr_review_cli.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: sample_output.md  sample_pr_summary.txt
prompts/: general.md  release_risk.md  security.md  testing.md
tests/: test_pr_review_cli.py
