[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-review-prompts"
version = "0.1.0"
description = "Open-source prompt packs and CLI tools for AI-assisted pull request review."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Armend Ujkani" }
]
keywords = ["ai", "code-review", "pull-request", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/armendujkani123/ai-pr-review-prompts"
Issues = "https://github.com/armendujkani123/ai-pr-review-prompts/issues"

[project.scripts]
ai-pr-review = "pr_review_cli:main"

[tool.setuptools]
py-modules = ["pr_review_cli"]
